--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "type": "module",
-  "homepage": "https://inceon.github.io/rork-books/",
+  "homepage": "https://inceon.github.io/rork-books",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "postbuild": "cp dist/index.html dist/404.html",
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
